--- a/Content/Home.htm
+++ b/Content/Home.htm
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="8" MadCap:lastHeight="7947" MadCap:lastWidth="1490" class="HomePage">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" class="HomePage">
     <head>
         <link href="Resources/Stylesheets/StylesForHomePage.css" rel="stylesheet" type="text/css" />
     </head>
@@ -7,7 +7,7 @@
         <div class="topichero">
             <div class="title-text">
                 <div class="small-12 small-centered columns centered-text">
-                    <h1 class="whiteheader">Welcome to <MadCap:variable name="General.ProductName" />'s Online Help
+                    <h1 class="whiteheader">111Welcome to <MadCap:variable name="General.ProductName" />'s Online Help
                     </h1>
                     <h3 class="whiteheader">The Place to Find Information, Tutorials, FAQs, and More</h3>
                 </div>
@@ -17,31 +17,19 @@
         <div class="slidingshow">
             <MadCap:slideshow MadCap:SlidesDisplayed="3" MadCap:AdaptiveHeight="True" MadCap:Navigation="None" MadCap:ShowCaptions="True">
                 <MadCap:slide title="Getting Started">
-                    <p>
-                        <a href="A_Getting Started/Getting Started.htm">
-                            <img src="Resources/Images/KeyFeatures.png" alt="" class="Slideshow" />
-                        </a>
+                    <p><a href="A_Getting Started/Getting Started.htm"><img src="Resources/Images/KeyFeatures.png" alt="" class="Slideshow" /></a>
                     </p>
                 </MadCap:slide>
                 <MadCap:slide title="Basic Steps">
-                    <p>
-                        <a href="A_Getting Started/Basic Steps.htm">
-                            <img src="Resources/Images/BasicSteps.png" alt="" class="Slideshow" />
-                        </a>
+                    <p><a href="A_Getting Started/Basic Steps.htm"><img src="Resources/Images/BasicSteps.png" alt="" class="Slideshow" /></a>
                     </p>
                 </MadCap:slide>
                 <MadCap:slide title="What's New">
-                    <p>
-                        <a href="A_Getting Started/Whats New.htm">
-                            <img src="Resources/Images/WhatsNew.png" alt="" class="Slideshow" />
-                        </a>
+                    <p><a href="A_Getting Started/Whats New.htm"><img src="Resources/Images/WhatsNew.png" alt="" class="Slideshow" /></a>
                     </p>
                 </MadCap:slide>
                 <MadCap:slide title="FAQs">
-                    <p>
-                        <a href="E_Footer Topics/FAQs.htm">
-                            <img src="Resources/Images/FAQs.png" alt="" class="Slideshow" />
-                        </a>
+                    <p><a href="E_Footer Topics/FAQs.htm"><img src="Resources/Images/FAQs.png" alt="" class="Slideshow" /></a>
                     </p>
                 </MadCap:slide>
             </MadCap:slideshow>
@@ -51,8 +39,7 @@
                 <div class="left-section small-12 medium-7 columns">
                     <div class="left-content">
                         <h3 class="SubCenter">Meet <MadCap:variable name="General.ProductName" /></h3>
-                        <p>
-                            <MadCap:variable name="General.ProductName" /> gives you the following: </p>
+                        <p><MadCap:variable name="General.ProductName" /> gives you the following: </p>
                         <ul class="mc-bullets">
                             <li value="1">State-of-the-art interface</li>
                             <li>Quality widgets</li>
@@ -63,11 +50,9 @@
                         </ul>
                     </div>
                     <div class="button-group center row">
-                        <div class="button black small-12 small-centered large-uncentered large-6 columns">
-                            <a href="A_Getting Started/Getting Started.htm" class="BlackText">Where Do I Begin?</a>
+                        <div class="button black small-12 small-centered large-uncentered large-6 columns"><a href="A_Getting Started/Getting Started.htm" class="BlackText">Where Do I Begin?</a>
                         </div>
-                        <div class="button black small-12 small-centered large-uncentered large-offset-1 large-4 end columns">
-                            <a href="A_Getting Started/Basic Steps.htm" class="BlackText">Basic Steps</a>
+                        <div class="button black small-12 small-centered large-uncentered large-offset-1 large-4 end columns"><a href="A_Getting Started/Basic Steps.htm" class="BlackText">Basic Steps</a>
                         </div>
                     </div>
                 </div>
@@ -75,43 +60,24 @@
                     <div class="right-content">
                         <h3 class="SubCenter">PDF Guides</h3>
                         <div class="table-images center row">
-                            <div class="small-4 columns">
-                                <a href="http://docs.madcapsoftware.com/FlareTemplates/UserGuideAGreen.pdf" target="_blank">
-                                    <img src="Resources/Images/PDF Cover.png" class="Hyperlinked" />
-                                </a>
+                            <div class="small-4 columns"><a href="http://docs.madcapsoftware.com/FlareTemplates/UserGuideAGreen.pdf" target="_blank"><img src="Resources/Images/PDF Cover.png" class="Hyperlinked" /></a>
                             </div>
-                            <div class="small-4 columns">
-                                <a href="http://docs.madcapsoftware.com/FlareTemplates/UserGuideAGreen.pdf" target="_blank">
-                                    <img src="Resources/Images/PDF Cover.png" class="Hyperlinked" />
-                                </a>
+                            <div class="small-4 columns"><a href="http://docs.madcapsoftware.com/FlareTemplates/UserGuideAGreen.pdf" target="_blank"><img src="Resources/Images/PDF Cover.png" class="Hyperlinked" /></a>
                             </div>
-                            <div class="small-4 columns">
-                                <a href="http://docs.madcapsoftware.com/FlareTemplates/UserGuideAGreen.pdf" target="_blank">
-                                    <img src="Resources/Images/PDF Cover.png" class="Hyperlinked" />
-                                </a>
+                            <div class="small-4 columns"><a href="http://docs.madcapsoftware.com/FlareTemplates/UserGuideAGreen.pdf" target="_blank"><img src="Resources/Images/PDF Cover.png" class="Hyperlinked" /></a>
                             </div>
                         </div>
                         <div class="table-images center row">
-                            <div class="small-4 columns">
-                                <a href="http://docs.madcapsoftware.com/FlareTemplates/UserGuideAGreen.pdf" target="_blank">
-                                    <img src="Resources/Images/PDF Cover.png" class="Hyperlinked" />
-                                </a>
+                            <div class="small-4 columns"><a href="http://docs.madcapsoftware.com/FlareTemplates/UserGuideAGreen.pdf" target="_blank"><img src="Resources/Images/PDF Cover.png" class="Hyperlinked" /></a>
                             </div>
-                            <div class="small-4 columns">
-                                <a href="http://docs.madcapsoftware.com/FlareTemplates/UserGuideAGreen.pdf" target="_blank">
-                                    <img src="Resources/Images/PDF Cover.png" class="Hyperlinked" />
-                                </a>
+                            <div class="small-4 columns"><a href="http://docs.madcapsoftware.com/FlareTemplates/UserGuideAGreen.pdf" target="_blank"><img src="Resources/Images/PDF Cover.png" class="Hyperlinked" /></a>
                             </div>
-                            <div class="small-4 columns">
-                                <a href="http://docs.madcapsoftware.com/FlareTemplates/UserGuideAGreen.pdf" target="_blank">
-                                    <img src="Resources/Images/PDF Cover.png" class="Hyperlinked" />
-                                </a>
+                            <div class="small-4 columns"><a href="http://docs.madcapsoftware.com/FlareTemplates/UserGuideAGreen.pdf" target="_blank"><img src="Resources/Images/PDF Cover.png" class="Hyperlinked" /></a>
                             </div>
                         </div>
                     </div>
                     <div class="button-group center row">
-                        <div class="button black small-12 large-6 small-centered columns">
-                            <a href="E_Footer Topics/PDF Downloads.htm" class="BlackText">View More PDFs</a>
+                        <div class="button black small-12 large-6 small-centered columns"><a href="E_Footer Topics/PDF Downloads.htm" class="BlackText">View More PDFs</a>
                         </div>
                     </div>
                 </div>
